implement update entry
